[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://04B_30__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Get_Player_Name.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 599.0
color = Color( 0.564706, 0.996078, 0.407843, 0.607843 )

[node name="Increase_score" type="Button" parent="."]
margin_left = 182.0
margin_top = 373.0
margin_right = 335.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 1 )
text = "Increase"
flat = true

[node name="Decrease_score" type="Button" parent="."]
margin_left = 664.0
margin_top = 376.0
margin_right = 817.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 2 )
text = "Decrease"
flat = true

[node name="Back" type="Button" parent="."]
margin_left = 800.0
margin_top = 547.0
margin_right = 1024.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "BACK"
flat = true

[node name="Submit" type="Button" parent="."]
margin_left = 421.0
margin_top = 504.0
margin_right = 645.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 2 )
text = "Submit"
flat = true

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 329.0
margin_top = 142.0
margin_right = 680.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 3 )
text = "Score: "

[node name="Player_Name" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Increase_score" to="." method="_on_Increase_score_pressed"]
[connection signal="pressed" from="Decrease_score" to="." method="_on_Decrease_score_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
